--- a/templates/actualites/detail.html
+++ b/templates/actualites/detail.html
@@ -1,19 +1,108 @@
-{% extends 'base.html' %} {% block content %}
-<h1 class="title">{{ blog_obj.title }}</h1>
-<p>{{ blog_obj.body | safe}}</p>
+{% extends 'base_actualite.html' %} {% block content %}
+<!-- Start Blog
+    ============================================= -->
+<!-- Start Breadcrumb 
+    ============================================= -->
+<div
+  class="breadcrumb-area shadow dark bg-fixed text-center text-light"
+  style="background-image: url('static/assets/img/2440x1578.jpg')"
+>
+  <div class="container">
+    <div class="row">
+      <div class="col-lg-12 col-md-12">
+        <h1>{{ blog_obj.title }}</h1>
+        <!--
+            <ul class="breadcrumb">
+              <li>
+                <a href="#"><i class="fas fa-home"></i> Blog</a>
+              </li>
+              <li><a href="#">Single</a></li>
+              <li class="active">Left Sidebar</li>
+            </ul>
+            -->
+      </div>
+    </div>
+  </div>
+</div>
+<!-- End Breadcrumb -->
 
-{% for tag in actualite.tags.all %}
-<h3 class="sidebar__title">{{tag.name}}</h3>
-{% endfor %}
-<!-- /.sidebar__title -->
-<ul class="list-unstyled sidebar__lists">
-  {% for actualite in similar_posts %}
-  <li>
-    <a href="{% url 'actualite_detail' actualite.slug %}"
-      >{{actualite.title}}</a
-    >
-  </li>
-  {% empty %} {% endfor %}
-</ul>
+<div class="blog-area single full-blog right-sidebar full-blog default-padding">
+  <div class="container">
+    <div class="row">
+      <div class="blog-items">
+        <div class="blog-content col-md-8">
+          <div class="single-item">
+            <div class="item">
+              <!-- Start Post Thumb -->
+              <!--
+              <div class="thumb">
+                <a href="#">
+                  <img src="assets/img/1500x700.png" alt="Thumb" />
+                </a>
+              </div>
+              -->
+              <!-- Start Post Thumb -->
 
-{% endblock %}
+              <div class="info">
+                <!--
+                <div class="meta">
+                  <ul>
+                    <li>{{ blog_obj.title }}</li>
+                  </ul>
+                </div>
+                -->
+                <div class="content">
+                  <!--
+                  <div class="tags share">
+                    <div class="items">
+                      <a href="#">Event</a>
+                      <a href="#">Education</a>
+                    </div>
+                    <div class="social-share">
+                      <ul>
+                        <li>
+                          <i class="fas fa-share-alt"></i>
+                        </li>
+                        <li class="facebook">
+                          <a href="#">
+                            <i class="fab fa-facebook-f"></i>
+                          </a>
+                        </li>
+                        <li class="twitter">
+                          <a href="#">
+                            <i class="fab fa-twitter"></i>
+                          </a>
+                        </li>
+                        <li class="linkedin">
+                          <a href="#">
+                            <i class="fab fa-linkedin-in"></i>
+                          </a>
+                        </li>
+                      </ul>
+                    </div>
+                  </div>
+                  -->
+                  <!--
+                  <h3>{{post.title}}</h3>
+                  -->
+                  <p>{{ blog_obj.body | safe}}</p>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <!-- End Comments Form -->
+        </div>
+        <!-- Start Sidebar -->
+        {% include 'include/sidebar_actualite.html' %}
+        <!-- End Start Sidebar -->
+      </div>
+    </div>
+  </div>
+</div>
+<!-- End Blog -->
+
+<!-- Start Footer 
+  ============================================= -->
+<!-- End Footer -->
+{% include 'include/newsletter.html' %} {% endblock %}
