--- a/templates/base_detail.html
+++ b/templates/base_detail.html
@@ -68,7 +68,7 @@
     </div>
     <header id="home">{% include 'include/header.html' %}</header>
     {% include 'include/banner_detail.html' %} {%block content %} {% endblock %}
-    <footer class="bg-light">{% include 'include/footer.html' %}</footer>
+    <footer class="bg-dark text-light">{% include 'include/footer.html' %}</footer>
 
     <script src="{% static 'assets/js/jquery-1.12.4.min.js' %}"></script>
     <script src="{% static 'assets/js/bootstrap.min.js' %}"></script>
