--- a/templates/include/banner_detail.html
+++ b/templates/include/banner_detail.html
@@ -7,7 +7,9 @@
   <div class="container">
     <div class="row">
       <div class="col-lg-12 col-md-12">
-        <h1>{{post.title}}</h1>
+        <h1>{{ blog_obj.title }}</h1>
+        <p><h3>{{ blog_obj.intro }}</h3></p>
+
         <!--
         <ul class="breadcrumb">
           <li>
