--- a/templates/include/header.html
+++ b/templates/include/header.html
@@ -70,7 +70,7 @@
             >Côte d'Ivoire en Bref</a
           >
           <ul class="dropdown-menu">
-            <li><a href="https://economie.lescrushderosy.org/post/presentation-du-pays/">Présentation du pays</a></li>
+            <li><a href="https://economie.lescrushderosy.org/post/presentation-du-pays/">Présentation du pays.</a></li>
             <li><a href="">Position géostratégique</a></li>
             <li><a href="">Vie politique et administrative</a></li>
             <li><a href="">Caractéristiques socio-économiques</a></li>
